refactor: updating necessary class and docs (#7)
* refactor: remove /users endpoints

* refactor: remove auth register endpoint

* refactor: remove unused ResourcesAccessRules

* docs: update mcd.canvas

* refactor: move UserRole to repository package

* feat: add TeacherStatus enum

* feat: add Level enum

* feat: add LearningPath enum

* feat: add StudentStatus enum

* feat: add JTeacherInheritance entity

* feat: add JStudentInheritance entity

* feat: link user to inheritance tables

* feat: add inheritance tables to schema

* test: mirror inheritance schema

* test: use ADMIN role in verification IT

* test: use ADMIN role in login IT

* test: use ADMIN role in resend-link IT

* docs: update conceptual data model and align openapi specification

* refactor: set jacoco to 10%
